--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,82 @@
+body {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-/* 
+.todo-main {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: whitesmoke;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.todo-title {
+  text-align: center;
+  color: lightblue;
+  font-family: 'Arial', sans-serif;
+  font-size: 80px;
+  margin-bottom: 20px;
+}
 
-*/
+.todo-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.todo-task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.delete-button {
+  background: none;
+  border: none;
+  color: rgb(196, 53, 53);
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.empty-message {
+  text-align: center;
+  color: lightgrey;
+}
+
+.input-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.todo-input {
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 4px;
+  margin-right: 10px;
+  flex: 1;
+}
+
+.add-button {
+  background-color: lightgreen;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.add-button:hover {
+  background-color: #2aa15c;
+}
